--- a/styles/room-details/section-room-avaliability.scss
+++ b/styles/room-details/section-room-avaliability.scss
@@ -24,6 +24,8 @@
 .img__room-details{
     width: 100%;
     margin-bottom: 49px;
+    border-radius: 2px;
+    height: 350px;
 }
 
 .section-room-availability__check{
