--- a/styles/offers/section-offer-rooms.scss
+++ b/styles/offers/section-offer-rooms.scss
@@ -9,11 +9,12 @@
     margin-top: 16px;
     width: 100%;
     position: relative;
-
 }
 
 .img__offer-rooms{
     width: 100%;
+    height: 550px;
+    border-radius: 3px;
 }
 
 .img__prices-offer{
