--- a/styles/rooms/section-selection-rooms.css
+++ b/styles/rooms/section-selection-rooms.css
@@ -14,6 +14,8 @@
 .rooms__img {
   position: relative;
   width: 100%;
+  height: 250px;
+  border-radius: 2px;
 }
 
 .rooms.section-hand-picked__rectangle {
