--- a/styles/rooms/section-selection-rooms.scss
+++ b/styles/rooms/section-selection-rooms.scss
@@ -15,6 +15,8 @@
 .rooms__img{
     position: relative;
     width: 100%;
+    height: 250px;
+    border-radius: 2px;
 }
 
 .rooms.section-hand-picked__rectangle{
