--- a/styles/home/section-about-us.css
+++ b/styles/home/section-about-us.css
@@ -55,7 +55,9 @@
     margin-bottom: 24px;
     margin-left: 30px;
     margin-bottom: 60px;
-    margin-right: 90px;
+    margin-right: 0px;
+    width: 200px;
+    min-width: 200px;
   }
   .button-gold__text {
     background: #BEAD8E;
@@ -89,17 +91,18 @@
     padding-left: 35px;
     padding-right: 53px;
     box-shadow: 0px 8px 16px rgba(34, 34, 34, 0.02);
+    z-index: 1;
   }
   .strong-team__img-container-strong-team {
     width: 100%;
     position: relative;
-    z-index: 0;
+    z-index: 1;
   }
   .img-container-strong-team__img-team-gold {
     z-index: 5;
   }
   .img-container-strong-team__transparent-img {
-    z-index: 2;
+    z-index: -2;
     position: relative;
   }
   .transparent-img__img {
