--- a/styles/home/section-about-us.scss
+++ b/styles/home/section-about-us.scss
@@ -62,7 +62,9 @@
         margin-bottom: 24px;
         margin-left: 30px;
         margin-bottom: 60px;
-        margin-right: 90px;
+        margin-right: 0px;
+        width: 200px;
+        min-width: 200px;
     }
     
     .button-gold__text{
@@ -102,12 +104,13 @@
         padding-left: 35px;
         padding-right: 53px;
         box-shadow: 0px 8px 16px rgba(34, 34, 34, 0.02);
+        z-index: 1;
     }
     
     .strong-team__img-container-strong-team{
         width: 100%;
         position: relative;
-        z-index: 0;
+        z-index: 1;
     }
         
     
@@ -116,7 +119,7 @@
     }
         
     .img-container-strong-team__transparent-img{
-        z-index: 2;
+        z-index: -2;
         position: relative;
     }
     
