--- a/styles/header.scss
+++ b/styles/header.scss
@@ -34,7 +34,6 @@
         align-items: center;
         padding-left: 20px;
         margin-right: 32px;
-        
     }
 
     .inner__burger:hover{
@@ -46,7 +45,14 @@
         background: #FFFFFF;
         box-shadow: 0px 14px 24px rgba(139, 139, 139, 0.25);
         margin-right: 13.52px;
+        position: relative;
+        top: 5px;
     }
+
+    .inner__title{
+        position: relative;
+        
+        }
 
     .burger__img{
         width: 20px;
@@ -179,6 +185,8 @@
 
     .inner__title{
     width: 137px;
+    position: relative;
+    bottom: 5px;
     }
 
     .burger__img{
