changes in gitignore

--- a/styles/about/section-luxury.scss
+++ b/styles/about/section-luxury.scss
@@ -58,6 +58,10 @@
     .span-home__effect{
         margin-left: 8px;
     }
+
+    .home{
+        cursor: pointer;
+    }
     
     .span-home__about{
         padding-left: 8px;
