--- a/styles/about/section-luxury.css
+++ b/styles/about/section-luxury.css
@@ -57,6 +57,10 @@
   margin-left: 8px;
 }
 
+.home {
+  cursor: pointer;
+}
+
 .span-home__about {
   padding-left: 8px;
   color: rgb(190, 173, 142);
