--- a/styles/about/section-restaurant.css
+++ b/styles/about/section-restaurant.css
@@ -90,6 +90,7 @@
     width: 30%;
     position: relative;
     top: 20px;
+    margin-left: 10%;
   }
   .img-container__img-restaurant {
     width: 500px;
