--- a/styles/home/section-hand-picked.scss
+++ b/styles/home/section-hand-picked.scss
@@ -208,7 +208,7 @@
     
     .carrusel__img-hand-picked{
         width: 85%;
-        height: 300px;
+        height: auto;
         border-radius: 3px;
         margin: 0 auto
     }
