--- a/styles/about/section-luxury.scss
+++ b/styles/about/section-luxury.scss
@@ -1,6 +1,8 @@
 
     .section-about-us-4__section-luxury{
-        background: #333333;
+        background-image: url('../../img/about/reception.jpg');
+        background-size: cover;
+        background-position: center;
         padding-left: 20px;
         padding-top: 75px;
         padding-right: 20px;
@@ -152,7 +154,9 @@
 
 @media (min-width: 1000px) {
     .section-about-us-4__section-luxury{
-        background: #333333;
+        background-image: url('../../img/about/reception.jpg');
+        background-size: cover;
+        background-position: center;
         padding-left: 30%;
         padding-top: 150px;
         padding-right: 20px;
