--- a/styles/home/section-about-us.css
+++ b/styles/home/section-about-us.css
@@ -3,10 +3,13 @@
     display: flex;
     flex-direction: column;
     padding-top: 38px;
+    padding-bottom: 35px;
     margin-bottom: 45px;
     padding-left: 20px;
     justify-content: center;
-    background: linear-gradient(180deg, #F9F9F9 33%, #FFFFFF 33%);
+    background: url("../../img/home/relaxing-zone.jpg"), linear-gradient(180deg, #f9f9f9 33%, #ffffff 33%);
+    background-size: cover;
+    background-position: left;
   }
   .container__section-about-us {
     display: flex;
@@ -60,7 +63,7 @@
     min-width: 200px;
   }
   .button-gold__text {
-    background: #BEAD8E;
+    background: #bead8e;
     padding: 22px 60px 22px 60px;
   }
   .section__img1-container {
@@ -87,7 +90,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    background: #FFFFFF;
+    background: #ffffff;
     padding-left: 35px;
     padding-right: 53px;
     box-shadow: 0px 8px 16px rgba(34, 34, 34, 0.02);
@@ -167,10 +170,15 @@
   }
   .content__section-about-us {
     position: relative;
-    background: #F9F9F9;
+    background: #f9f9f9;
     padding-left: 190px;
     width: 100%;
     text-align: left;
+    background-image: url("../../img/home/relaxing-zone.jpg");
+    opacity: 0.9;
+    background-size: cover;
+    background-position: left;
+    background-image: linear-gradient();
   }
   .section-about-us__title {
     text-align: left;
@@ -180,19 +188,18 @@
     font-size: 56px;
     line-height: 60px;
     letter-spacing: -1.2px;
-    color: #111111;
+    color: #ffffff;
     width: 457px;
   }
   .section-about-us__p {
     text-align: left;
     padding-top: 16px;
-    margin-right: 20px;
     font-family: "Archivo";
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-    color: #777777;
+    color: #ffffff;
     padding-left: 20px;
     padding-bottom: 48px;
     width: 397px;
@@ -204,7 +211,7 @@
     margin-bottom: 60px;
   }
   .button-gold__text {
-    background: #BEAD8E;
+    background: #bead8e;
     padding: 22px 60px 22px 60px;
     width: 600px;
   }
@@ -236,7 +243,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    background: #FFFFFF;
+    background: #ffffff;
     padding-left: 20px;
     padding-right: 20px;
     box-shadow: 0px 8px 16px rgba(34, 34, 34, 0.02);
