--- a/styles/home/section-about-us.scss
+++ b/styles/home/section-about-us.scss
@@ -1,23 +1,27 @@
 @media (max-width: 999px) {
-    .section-about-us{
-        display: flex;
-        flex-direction: column;
-        padding-top: 38px;
-        margin-bottom: 45px;
-       padding-left: 20px;
-       justify-content: center;
-       background: linear-gradient(180deg, #F9F9F9 33%, #FFFFFF 33%);
-    }
+  .section-about-us {
+    display: flex;
+    flex-direction: column;
+    padding-top: 38px;
+    padding-bottom: 35px;
+    margin-bottom: 45px;
+    padding-left: 20px;
+    justify-content: center;
+    background: url("../../img/home/relaxing-zone.jpg"),
+      linear-gradient(180deg, #f9f9f9 33%, #ffffff 33%);
+    background-size: cover;
+    background-position: left;
+  }
 
-    .container__section-about-us{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .section-about-us__span{
-    font-family: 'Archivo';
+  .container__section-about-us {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .section-about-us__span {
+    font-family: "Archivo";
     font-style: normal;
     font-weight: 700;
     font-size: 13px;
@@ -27,11 +31,10 @@
     margin-bottom: 32px;
     color: #777777;
     padding-left: 20px;
-    
-    }
-    
-    .section-about-us__title{
-    font-family: 'Old Standard TT';
+  }
+
+  .section-about-us__title {
+    font-family: "Old Standard TT";
     font-style: normal;
     font-weight: 400;
     font-size: 56px;
@@ -39,15 +42,14 @@
     text-align: center;
     letter-spacing: -1.2px;
     color: #111111;
-    
-    }
-    
-    .section-about-us__p{
+  }
+
+  .section-about-us__p {
     text-align: left;
     margin-top: 16px;
     margin-right: 20px;
     margin-bottom: 24px;
-    font-family: 'Archivo';
+    font-family: "Archivo";
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -55,127 +57,124 @@
     color: #777777;
     padding-left: 20px;
     margin-bottom: 48px;
-    }
-    
-    .section-about-us__button-gold{
-        margin-top: 24px;
-        margin-bottom: 24px;
-        margin-left: 30px;
-        margin-bottom: 60px;
-        margin-right: 0px;
-        width: 200px;
-        min-width: 200px;
-    }
-    
-    .button-gold__text{
-        background: #BEAD8E;
-        padding: 22px 60px 22px 60px;
-       
-    }
-    
-    .section__img1-container{
-        width: 100%;
-        margin-top: 100px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        position: relative;
-    }
-    
-    .img1-container__img{
-        width: 85%;
-        margin: 0 auto;
-    }
+  }
 
-    .img2-container__img{
-        width: 85%;
-        margin: 0 auto;
-    }
-    
-    .section__strong-team{
-        width: 85%;
-        margin: 0 auto;
-        padding-top: 50px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        background: #FFFFFF;
-        padding-left: 35px;
-        padding-right: 53px;
-        box-shadow: 0px 8px 16px rgba(34, 34, 34, 0.02);
-        z-index: 1;
-    }
-    
-    .strong-team__img-container-strong-team{
-        width: 100%;
-        position: relative;
-        z-index: 1;
-    }
-        
-    
-    .img-container-strong-team__img-team-gold{
-        z-index: 5;
-    }
-        
-    .img-container-strong-team__transparent-img{
-        z-index: -2;
-        position: relative;
-    }
-    
-    .transparent-img__img{
-       position: absolute;
-       top: -65px;
-       margin-left: 10px;
-    }
-    
-    .strong-team__span{
-        margin-bottom: 21px;
-        font-family: 'Old Standard TT';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 30px;
-        line-height: 30px;
-        letter-spacing: -0.9px;
-        color: #111111;
-        z-index: 1;
-    }
-    
-    .strong-team__p{
-        margin: 0 auto;
-        padding-bottom: 40px;
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 22px;
-        text-align: center;
-        color: #111111;
-        z-index: 1;
-        width: 200px;
-    }
+  .section-about-us__button-gold {
+    margin-top: 24px;
+    margin-bottom: 24px;
+    margin-left: 30px;
+    margin-bottom: 60px;
+    margin-right: 0px;
+    width: 200px;
+    min-width: 200px;
+  }
+
+  .button-gold__text {
+    background: #bead8e;
+    padding: 22px 60px 22px 60px;
+  }
+
+  .section__img1-container {
+    width: 100%;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+  }
+
+  .img1-container__img {
+    width: 85%;
+    margin: 0 auto;
+  }
+
+  .img2-container__img {
+    width: 85%;
+    margin: 0 auto;
+  }
+
+  .section__strong-team {
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background: #ffffff;
+    padding-left: 35px;
+    padding-right: 53px;
+    box-shadow: 0px 8px 16px rgba(34, 34, 34, 0.02);
+    z-index: 1;
+  }
+
+  .strong-team__img-container-strong-team {
+    width: 100%;
+    position: relative;
+    z-index: 1;
+  }
+
+  .img-container-strong-team__img-team-gold {
+    z-index: 5;
+  }
+
+  .img-container-strong-team__transparent-img {
+    z-index: -2;
+    position: relative;
+  }
+
+  .transparent-img__img {
+    position: absolute;
+    top: -65px;
+    margin-left: 10px;
+  }
+
+  .strong-team__span {
+    margin-bottom: 21px;
+    font-family: "Old Standard TT";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 30px;
+    letter-spacing: -0.9px;
+    color: #111111;
+    z-index: 1;
+  }
+
+  .strong-team__p {
+    margin: 0 auto;
+    padding-bottom: 40px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    text-align: center;
+    color: #111111;
+    z-index: 1;
+    width: 200px;
+  }
 }
 
 @media (min-width: 1000px) {
-    .section-about-us{
-        padding-top: 200px;
-        margin-bottom: 45px;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-       
-    }
+  .section-about-us {
+    padding-top: 200px;
+    margin-bottom: 45px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
 
-    .container__section-about-us{
-        display: flex;
-        flex-direction: row-reverse;
-        position: relative;
-        height: 450px;
-    }
-    
-    .section-about-us__span{
+  .container__section-about-us {
+    display: flex;
+    flex-direction: row-reverse;
+    position: relative;
+    height: 450px;
+  }
+
+  .section-about-us__span {
     position: absolute;
-    font-family: 'Archivo';
+    font-family: "Archivo";
     font-style: normal;
     font-weight: 700;
     font-size: 13px;
@@ -188,167 +187,154 @@
     right: 00px;
     top: -40px;
     width: 100%;
-    }
+  }
 
-    .content__section-about-us{
-        position: relative;
-        background: #F9F9F9;
-        padding-left: 190px;
-        width: 100%;
-        text-align: left;
-        
-
-    }
-    
-    .section-about-us__title{
+  .content__section-about-us {
+    position: relative;
+    background: #f9f9f9;
+    padding-left: 190px;
+    width: 100%;
     text-align: left;
-    font-family: 'Old Standard TT';
+    background-image: url("../../img/home/relaxing-zone.jpg");
+    opacity: 0.9;
+
+    background-size: cover;
+    background-position: left;
+    background-image: linear-gradient();
+  }
+
+  .section-about-us__title {
+    text-align: left;
+    font-family: "Old Standard TT";
     font-style: normal;
     font-weight: 400;
     font-size: 56px;
     line-height: 60px;
     letter-spacing: -1.2px;
-    color: #111111;
+    color: #ffffff;
     width: 457px;
-    }
-    
-    .section-about-us__p{
+  }
+
+  .section-about-us__p {
     text-align: left;
     padding-top: 16px;
-    margin-right: 20px;
-    font-family: 'Archivo';
+    font-family: "Archivo";
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-    color: #777777;
+    color: #ffffff;
     padding-left: 20px;
     padding-bottom: 48px;
     width: 397px;
-    }
-    
-    .section-about-us__button-gold{
-        margin-top: 24px;
-        margin-bottom: 24px;
-        margin-left: 30px;
-        margin-bottom: 60px;
-        
-        
-    }
-    
-    .button-gold__text{
-        background: #BEAD8E;
-        padding: 22px 60px 22px 60px;
-        width: 600px;
-       
-    }
-    
-    .section__img1-container{
-        position: relative;
-        width: 100%;
-        margin-top: 60px;
-        margin-left: 50px;
-        margin-right: 53px;
-        right: 40px;;
-        bottom: 150px;
-    }
-    
-    .img1-container__img{
-        position: absolute;
-        width: 270px;
-        left: 50px;
-        height: 300px;
-    }
+  }
 
-   
-    
-    .img2-container__img{
+  .section-about-us__button-gold {
+    margin-top: 24px;
+    margin-bottom: 24px;
+    margin-left: 30px;
+    margin-bottom: 60px;
+  }
 
-        width: 270px;
-        left: 50px;
-        height: 300px;
-    }
-    
-    .section__strong-team{
-        order: -1;
-        position: relative;
-        width: 280px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        background: #FFFFFF;
-        padding-left: 20px;
-        padding-right: 20px;
-        box-shadow: 0px 8px 16px rgba(34, 34, 34, 0.02);
-        top: -90px;
-        left: 30px;
-        
-    }
-    
-    .strong-team__img-container-strong-team{
-        width: 100%;
-        position: relative;
-        z-index: 0;
-    }
+  .button-gold__text {
+    background: #bead8e;
+    padding: 22px 60px 22px 60px;
+    width: 600px;
+  }
 
-    .img-container-strong-team__img-team-gold{
-        z-index: 5;
-        position: relative;
-    }
-    
-    .img-container-strong-team__transparent-img{
-        z-index: 2;
-        position: relative;
-        
-    }
-    
-    .transparent-img__img{
-       position: absolute;
-       top: -65px;
-       margin-left: 10px;
-    }
-    
-    
-    
-    
-    .strong-team__span{
-        
-        margin-bottom: 21px;
-        font-family: 'Old Standard TT';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 30px;
-        line-height: 30px;
-        letter-spacing: -0.9px;
-        color: #111111;
-        z-index: 1;
-        
-    }
-    
-    .strong-team__p{
-        margin-left: 35px;
-        margin-right: 35px;
-        margin-bottom: 38px;
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 22px;
-        text-align: center;
-        color: #111111;
-        z-index: 1;
-        
-    
-    }
+  .section__img1-container {
+    position: relative;
+    width: 100%;
+    margin-top: 60px;
+    margin-left: 50px;
+    margin-right: 53px;
+    right: 40px;
+    bottom: 150px;
+  }
 
-    .section-about-us__card-container{
-        margin-left: 10px;
-        position: relative;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        margin-right: -200px;
-        top: -100px;
-    }
-    
+  .img1-container__img {
+    position: absolute;
+    width: 270px;
+    left: 50px;
+    height: 300px;
+  }
+
+  .img2-container__img {
+    width: 270px;
+    left: 50px;
+    height: 300px;
+  }
+
+  .section__strong-team {
+    order: -1;
+    position: relative;
+    width: 280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background: #ffffff;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-shadow: 0px 8px 16px rgba(34, 34, 34, 0.02);
+    top: -90px;
+    left: 30px;
+  }
+
+  .strong-team__img-container-strong-team {
+    width: 100%;
+    position: relative;
+    z-index: 0;
+  }
+
+  .img-container-strong-team__img-team-gold {
+    z-index: 5;
+    position: relative;
+  }
+
+  .img-container-strong-team__transparent-img {
+    z-index: 2;
+    position: relative;
+  }
+
+  .transparent-img__img {
+    position: absolute;
+    top: -65px;
+    margin-left: 10px;
+  }
+
+  .strong-team__span {
+    margin-bottom: 21px;
+    font-family: "Old Standard TT";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 30px;
+    letter-spacing: -0.9px;
+    color: #111111;
+    z-index: 1;
+  }
+
+  .strong-team__p {
+    margin-left: 35px;
+    margin-right: 35px;
+    margin-bottom: 38px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    text-align: center;
+    color: #111111;
+    z-index: 1;
+  }
+
+  .section-about-us__card-container {
+    margin-left: 10px;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-right: -200px;
+    top: -100px;
+  }
 }
