--- a/styles/home/section-hand-picked.css
+++ b/styles/home/section-hand-picked.css
@@ -199,7 +199,7 @@
   }
   .carrusel__img-hand-picked {
     width: 85%;
-    height: 300px;
+    height: auto;
     border-radius: 3px;
     margin: 0 auto;
   }
