--- a/styles/home/section-luxury-room.css
+++ b/styles/home/section-luxury-room.css
@@ -7,12 +7,11 @@
     justify-content: center;
   }
   .section-luxury-room {
-    padding-top: 50px;
-    margin-left: 52px;
-    margin-right: 53px;
-    margin-bottom: 60px;
+    margin: 0 auto;
     background: #222222;
     text-align: center;
+    width: 85%;
+    padding-top: 20px;
   }
   .section-luxury-room__container-luxury-room {
     margin-top: 29.45px;
