--- a/styles/home/section-luxury-room.scss
+++ b/styles/home/section-luxury-room.scss
@@ -12,12 +12,11 @@
 
     
     .section-luxury-room{
-        padding-top: 50px;
-        margin-left: 52px;
-        margin-right: 53px;
-        margin-bottom: 60px;
+        margin: 0 auto;
         background: #222222;
         text-align: center;
+        width: 85%;
+        padding-top: 20px;
     }
     
     .section-luxury-room__container-luxury-room{
