--- a/styles/home/section-menu.css
+++ b/styles/home/section-menu.css
@@ -49,7 +49,7 @@
     margin-bottom: 16px;
     flex-direction: row;
     align-items: center;
-    margin-right: 10%;
+    padding-right: 10%;
   }
   .all-options__options:hover {
     background-color: #222222;
@@ -68,6 +68,7 @@
     width: 120px;
     height: 120px;
     margin-right: 30px;
+    border-radius: 1px;
   }
   .text__name {
     font-family: "Old Standard TT";
@@ -124,9 +125,14 @@
     width: 100%;
     text-align: center;
     margin-bottom: 91px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
   }
   .carrusel__img {
-    width: 80%;
+    width: 30%;
+    height: 350px;
+    border-radius: 5px;
   }
 }
 @media (max-width: 999px) {
@@ -176,9 +182,10 @@
     align-items: center;
   }
   .options__img {
+    min-width: 100px;
     width: 120px;
     height: 120px;
-    margin-right: 30px;
+    margin-right: 15px;
   }
   .text__name {
     font-family: "Old Standard TT";
@@ -191,7 +198,7 @@
   }
   .text__description {
     margin-top: 12px;
-    margin-right: 20px;
+    margin-right: 5px;
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
@@ -225,6 +232,8 @@
     margin-bottom: 91px;
   }
   .carrusel__img {
-    width: 80%;
+    width: 50%;
+    border-radius: 5px;
+    margin-bottom: 20px;
   }
 }/*# sourceMappingURL=section-menu.css.map */
