--- a/styles/home/section-menu.scss
+++ b/styles/home/section-menu.scss
@@ -59,8 +59,7 @@
     margin-bottom: 16px;
     flex-direction: row;
     align-items: center;
-    margin-right: 10%;
-
+    padding-right: 10%;
 }
 
 .all-options__options:hover{
@@ -74,6 +73,7 @@
     }
     .options__golden-arrow-container{
         visibility: visible;
+        
     }
 }
 
@@ -81,6 +81,7 @@
     width: 120px;
     height: 120px;
     margin-right: 30px;
+    border-radius: 1px;
 }
 
 .text__name{
@@ -148,10 +149,15 @@ box-shadow: 0px 14px 24px rgba(190, 173, 142, 0.15);
     width: 100%;
     text-align: center;
     margin-bottom: 91px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .carrusel__img{
-    width: 80%;
+    width: 30%;
+    height: 350px;
+    border-radius: 5px;
 }
 }
 
@@ -211,9 +217,11 @@ box-shadow: 0px 14px 24px rgba(190, 173, 142, 0.15);
 }
 
 .options__img{
+    min-width: 100px;
     width: 120px;
     height: 120px;
-    margin-right: 30px;
+    margin-right: 15px;
+
 }
 
 .text__name{
@@ -228,7 +236,7 @@ box-shadow: 0px 14px 24px rgba(190, 173, 142, 0.15);
 
 .text__description{
     margin-top: 12px;
-    margin-right: 20px;
+    margin-right: 5px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -269,6 +277,8 @@ box-shadow: 0px 14px 24px rgba(190, 173, 142, 0.15);
 }
 
 .carrusel__img{
-    width: 80%;
+    width: 50%;
+    border-radius: 5px;
+    margin-bottom: 20px;
 }
 }
