--- a/app/styles/about/section-fun-facts.scss
+++ b/app/styles/about/section-fun-facts.scss
@@ -4,6 +4,8 @@
     margin-bottom: 83px;
 }
 
+
+
 .sections-fun-facts__subtitle{
     margin-left: 20px;
     margin-bottom: 24px;
@@ -68,13 +70,17 @@
     color: rgba(119, 119, 119, 1);
 }
 
-//IMAGENES GRISES
 .section-fun-facts__carrusel{
     width: 100%;
     margin-bottom: 82px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    overflow-y: hidden;
+}
+
+.section-fun-facts__carrusel-no-swiper{
+    position: absolute;
+    left: -300%;
+    overflow: hidden;
+    visibility: hidden;
 }
 
 .carrusel__fun-facts{
@@ -82,16 +88,24 @@
     margin: 0 auto;
 }
 
-.carrusel__fun-facts2{
-    position: absolute;
-    visibility: hidden;
-    left: -1000000px;
-}
+
 
 @media (min-width: 1000px) {
     .sections-fun-facts__container{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .section-fun-facts__carrusel-no-swiper{
+        width: 100%;
+        margin-bottom: 82px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        position: relative;
+        left: 0px;
+        overflow: hidden;
+        visibility: visible;
     }
 
     .section-fun-facts__carrusel{
@@ -100,6 +114,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
+    position: absolute;
+    left: -300%;
+    overflow: hidden;
+    visibility: hidden;
     }
 
     .carrusel__fun-facts{
@@ -114,5 +132,6 @@
         width: 95%;
         margin: 15px;
     }
+    
     
 }
