--- a/app/styles/home/section-menu.css
+++ b/app/styles/home/section-menu.css
@@ -43,6 +43,17 @@
   .section-menu__all-options {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    width: auto;
+    visibility: visible;
+    position: relative;
+    left: 0px;
+  }
+  .section-menu__all-options-swiper {
+    display: block;
+    width: 10px;
+    visibility: hidden;
+    position: absolute;
+    left: -300px;
   }
   .all-options__options {
     display: flex;
@@ -125,6 +136,14 @@
     width: 100%;
     text-align: center;
     margin-bottom: 91px;
+    display: none;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .section-menu__carrusel-no-swiper {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 91px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -136,11 +155,17 @@
   }
 }
 @media (max-width: 999px) {
+  .section-menu__carrusel-no-swiper {
+    position: absolute;
+    visibility: hidden;
+    left: -300%;
+  }
   .section-menu {
     margin-top: 200px;
     display: flex;
     flex-direction: column;
     margin-left: 20px;
+    overflow: hidden;
   }
   .section-menu__donut {
     display: inline;
@@ -174,6 +199,18 @@
   .section-menu__all-options {
     display: flex;
     flex-direction: column;
+    display: block;
+    width: 10px;
+    visibility: hidden;
+    position: absolute;
+    left: -300px;
+  }
+  .section-menu__all-options-swiper {
+    display: flex;
+    width: auto;
+    visibility: visible;
+    position: relative;
+    left: 0px;
   }
   .all-options__options {
     display: flex;
@@ -230,10 +267,23 @@
     width: 100%;
     text-align: center;
     margin-bottom: 91px;
+    overflow: hidden;
+  }
+  .section-menu__carrusel-container {
+    display: flex;
+  }
+  .img-container-menu {
+    width: 100%;
+    height: 300px;
+    border-radius: 5px;
+    flex-shrink: 0;
   }
   .carrusel__img {
-    width: 50%;
+    width: 300px;
+    height: 300px;
     border-radius: 5px;
-    margin-bottom: 20px;
   }
+}
+.swiper {
+  overflow-x: hidden;
 }/*# sourceMappingURL=section-menu.css.map */
