--- a/app/styles/home/section-menu.scss
+++ b/app/styles/home/section-menu.scss
@@ -6,7 +6,6 @@
     flex-direction: column;
     margin-left: 10%;
     margin-right: 10%;
-    
 }
 
 .section-menu__donut{
@@ -53,6 +52,18 @@
 .section-menu__all-options{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    width: auto;
+    visibility: visible;
+    position: relative;
+    left: 0px;
+}
+
+.section-menu__all-options-swiper{
+    display: block;
+    width: 10px;
+    visibility: hidden;
+    position: absolute;
+    left: -300px;
 }
 
 .all-options__options{
@@ -150,6 +161,15 @@ box-shadow: 0px 14px 24px rgba(190, 173, 142, 0.15);
     width: 100%;
     text-align: center;
     margin-bottom: 91px;
+    display: none;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.section-menu__carrusel-no-swiper{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 91px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -163,12 +183,19 @@ box-shadow: 0px 14px 24px rgba(190, 173, 142, 0.15);
 }
 
 @media (max-width: 999px) {
+
+.section-menu__carrusel-no-swiper{
+    position: absolute;
+    visibility: hidden;
+    left: -300%;
+}
     
 .section-menu{
     margin-top: 200px;
     display: flex;
     flex-direction: column;
     margin-left: 20px;
+    overflow: hidden;
 }
 
 .section-menu__donut{
@@ -207,7 +234,18 @@ box-shadow: 0px 14px 24px rgba(190, 173, 142, 0.15);
 .section-menu__all-options{
     display: flex;
     flex-direction: column;
-
+    display: block;
+    width: 10px;
+    visibility: hidden;
+    position: absolute;
+    left: -300px;
+}
+.section-menu__all-options-swiper{
+    display: flex;
+    width: auto;
+    visibility: visible;
+    position: relative;
+    left: -0px;
 }
 
 .all-options__options{
@@ -275,11 +313,25 @@ box-shadow: 0px 14px 24px rgba(190, 173, 142, 0.15);
     width: 100%;
     text-align: center;
     margin-bottom: 91px;
+    overflow: hidden;
+}
+.section-menu__carrusel-container{
+    display: flex;
 }
 
-.carrusel__img{
-    width: 50%;
-    border-radius: 5px;
-    margin-bottom: 20px;
+.img-container-menu{
+    width: 100%;
+    height: 300px;
+    border-radius: 5px;  
+    flex-shrink: 0;
 }
+.carrusel__img{
+    width: 300px;
+    height: 300px;
+    border-radius: 5px;    
+}
+}
+
+.swiper{
+    overflow-x: hidden;
 }
