--- a/app/styles/offers/section-offer-rooms.scss
+++ b/app/styles/offers/section-offer-rooms.scss
@@ -3,6 +3,7 @@
     padding-bottom: 40px;
     background: #FFFFFF;
     box-shadow: 0px 14px 24px rgba(184, 184, 184, 0.1); 
+    overflow: hidden;
 }
 
 .section-offer-rooms__img{
@@ -13,7 +14,6 @@
 
 .img__offer-rooms{
     width: 100%;
-    height: 550px;
     border-radius: 3px;
 }
 
