--- a/app/styles/room-details/section-related-rooms.scss
+++ b/app/styles/room-details/section-related-rooms.scss
@@ -2,7 +2,22 @@
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 101px;
+    position: relative;
+    left: 0px;
+    visibility: visible;
 }
+
+.section-related-rooms-no-swiper{
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 101px;
+    position: absolute;
+    overflow: hidden;
+    left: -300%;
+    visibility: hidden;
+}
+
+
 
 .section-related-rooms__title{
     margin-bottom: 13.45px;
@@ -21,9 +36,22 @@
 @media (min-width: 1000px) {
     .section-related-rooms{
         width: 70%;
-        position: relative;
         margin-bottom: 50px;
         left: 18%;
+        position: absolute;
+        overflow: hidden;
+        left: -300%;
+        visibility: hidden;
+    }
+
+    .section-related-rooms-no-swiper{
+        width: 70%;
+        margin-bottom: 50px;
+        margin-left: 19%;
+        left: 18%;
+        position: relative;
+        left: 0px;
+        visibility: visible;
     }
     
     .section-related-rooms__title{
