--- a/miranda-web/styles/offers/section-popular-rooms.scss
+++ b/miranda-web/styles/offers/section-popular-rooms.scss
@@ -71,6 +71,7 @@
         position: relative;
         left: 0px;
         overflow: hidden;
+        width: auto;
     }
     .section-popular-rooms__img-container-slider{
         display: grid;
