--- a/miranda-web/styles/home/section-hand-picked.scss
+++ b/miranda-web/styles/home/section-hand-picked.scss
@@ -36,8 +36,9 @@
     cursor: pointer;
     padding-left: 20px 20px 20px 20px;
     img{
-      position: relative;
-      top: 12px;
+            position: absolute;
+            top: 18px;
+            left: 17px;
       :hover{
           color: #FFFFFF
       }
@@ -61,7 +62,7 @@
     padding-left: 20px 20px 20px 20px;
     img{
       position: relative;
-      top: 12px;
+      top: 18px;
     }
     border-radius: 2px;
     z-index: 1;
