--- a/miranda-web/styles/offers/section-popular-rooms.css
+++ b/miranda-web/styles/offers/section-popular-rooms.css
@@ -69,6 +69,7 @@
     position: relative;
     left: 0px;
     overflow: hidden;
+    width: auto;
   }
   .section-popular-rooms__img-container-slider {
     display: grid;
