--- a/miranda-web/styles/home/section-hand-picked.scss
+++ b/miranda-web/styles/home/section-hand-picked.scss
@@ -37,6 +37,8 @@
     padding-left: 20px 20px 20px 20px;
     img{
             position: absolute;
+            top: 15px;
+            right: 13px;
       :hover{
           color: #FFFFFF
       }
@@ -59,7 +61,9 @@
     cursor: pointer;
     padding-left: 20px 20px 20px 20px;
     img{
-      top: 18px;
+        top: 14px;
+        position: absolute;
+        right: 15px;
     }
     border-radius: 2px;
     z-index: 1;
@@ -235,7 +239,8 @@
         cursor: pointer;
         padding-left: 20px 20px 20px 20px;
         img{
-          top: 16px;
+            top: 16px;
+            right: 0px;
           :hover{
               color: #FFFFFF
           }
@@ -258,7 +263,9 @@
         cursor: pointer;
         padding-left: 20px 20px 20px 20px;
         img{
-          top: 16px;
+            top: 14px;
+            position: absolute;
+            right: 0px;
         }
         border-radius: 2px;
         z-index: 1;
